# NetScope

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
netscope/: __init__.py  _version.py  activation_collector.py  base_collector.py  collector_batch.py  collector_config.py  collector_kind.py  collector_record.py  collector_result.py  collector_summary.py  collector_target.py  component.py  config.py  constants.py  context.py  enums.py  environment.py  exceptions.py  fx_graph_builder.py  fx_graph_builder_config.py  gradient_collector.py  graph_direction.py  graph_edge.py  graph_node.py  graph_summary.py  hook_adapter.py  hook_event.py  hook_handle.py  hook_kind.py  hook_manager.py  hook_registry.py  hook_result.py  hook_target.py  identity.py  init.py  inspection_result.py  inspector.py  inspector_config.py  interfaces.py  layer_tree.py  (+34 more)
tests/: __init__.py  test_activation_collector.py  test_artifacts.py  test_cache.py  test_collector_protocols.py  test_collectors.py  test_component.py  test_config.py  test_context.py  test_environment.py  test_fx_graph_builder.py  test_gradient_weight_collectors.py  test_graph.py  test_graph_contracts.py  test_graph_validation.py  test_hook_adapters.py  test_hook_manager.py  test_hook_protocols.py  test_hook_registry.py  test_hooks.py  test_inspector.py  test_inspector_session_reuse.py  test_interfaces.py  test_layer_tree.py  test_layer_tree_builder.py  test_module_metadata.py  test_paths.py  test_protocols.py  test_public_api.py  test_registry.py  test_registry_decorators.py  test_registry_manager.py  test_runtime_models.py  (+8 more)
(+15 files in other folders)
